--- a/languages/sh/awk/tutorials.org
+++ b/languages/sh/awk/tutorials.org
@@ -10,16 +10,22 @@
       END           { for (i=1;i<=im;i++) print freq[i],fc[i],ir[i] }
     #+end_src
 - tutorial https://github.com/adrianlarion/simple-awk
-* Tutorial 2015 https://ferd.ca/awk-in-20-minutes.html
+* 15 | https://ferd.ca/awk-in-20-minutes.html
+
 - *Patterns* can be
-  1) regular expressions
-  2) boolean expressions
-  3) special patterns
+  - regular expressions
+  - boolean expressions
+  - special patterns
+
 - No PCRE on awk, but yes on gawk
+
 - Cannot capture specific regex groups to be used on action
+
 - "==" will do a "fuzzy" matching
   eg: "23" == 23 is true
+
 - use ~ and !~ to match a string or variable with a regex
   string ~ /regex/
+
 - *variables* are all global,
-  whathever you declare on a block, will be visible to the other blocks, for each line
+  whatever you declare on a block, will be visible to the other blocks, for each line
