--- a/languages/beam/erlang/erlang.org
+++ b/languages/beam/erlang/erlang.org
@@ -22,41 +22,117 @@ https://www.erlang.org/doc/apps/parsetools/parsetools.pdf
 - https://www.erlang.org/doc/reference_manual/expressions.html
 - Supports type union with (|)
   atom() | integer()
+
+- Type signtures
+  #+begin_src erlang
+    %% simple type signature
+    -spec kind(card()) -> 'face' | 'number'.
+    kind({_,A}) when A >= 1, A =< 10 -> number;
+    kind({_,_})                      -> face.
+
+    %% multiple type signatures for a same function
+    -spec convert(tuple()) -> list();
+                 (list())  -> tuple().
+    convert(Tup) when is_tuple(Tup) -> tuple_to_list(Tup);
+    convert(L = [_|_])              -> list_to_tuple(L).
+
+    %% using a type defined elsewhere
+    -spec match(ets:tab(), Key::any()) -> Entry::any().
+  #+end_src
+
+- Declaring new
+  #+begin_src erlang
+    -export_type([tree/0]). % !!!!
+
+    %% opaque, only the module that defined the type can look inside it, other modules can't pattern match on its values
+    -opaque tree() :: {'node', 'nil'}
+                    | {'node', tree(), tree(), any(), any()}.
+
+    -type tree() :: {'node', 'nil'}
+                  | {'node', Left::tree(), Right::tree(), Key::any(), Value::any()}.
+  #+end_src
+
 - Destructuring can happen on the function parameter
-  - f({athing,{A,B},N}=C) -> C
-*** Primitive types
-|-------------+-------------------------------|
-| spec        | create                        |
-|-------------+-------------------------------|
-| any()       |                               |
-| none()      |                               |
-| pid()       | self() or spawn()             |
-| port()      | open_port()                   |
-| reference() | make_ref()                    |
-| binary()    | <<10,20>>                     |
-| bitstring() | <<"ABC">>                     |
-| char()      | $A or $\n                     |
-| number()    | 23 or 3.14                    |
-| integer()   | 23 or 1_337 or 2#101 or 16#1f |
-| float()     | 3.14                          |
-| string()    | "foo"                         |
-| atom()      | foo or 'foo'                  |
-| boolean()   | 'false'                       |
-| 'foo'       | 'foo'                         |
-| nil or []   | []                            |
-|-------------+-------------------------------|
+  #+begin_src erlang
+    f({athing,{A,B},N}=C) -> C
+  #+end_src
+
+*** Singleton Types
+
+|--------------+--------------|
+| spec         | create       |
+|--------------+--------------|
+| 42           | 42           |
+| [], {}, <<>> | [], {}, <<>> |
+| 'some atom'  | 'some atom'  |
+| 'foobar'     | 'foobar'     |
+|--------------+--------------|
+
+*** Built-in Types
+
+|--------------------------------+-------------------------------+------------------------------------------------------------------|
+| spec                           | create                        |                                                                  |
+|--------------------------------+-------------------------------+------------------------------------------------------------------|
+| any()                          |                               |                                                                  |
+| none()                         |                               |                                                                  |
+| pid()                          | self() or spawn()             |                                                                  |
+| port()                         | open_port()                   |                                                                  |
+| reference()                    | make_ref()                    |                                                                  |
+|--------------------------------+-------------------------------+------------------------------------------------------------------|
+| binary()                       | <<10,20>>                     |                                                                  |
+| <<_:Integer>>                  |                               | a binary of known length                                         |
+| <<_:_*Integer>>                |                               | a binary with *unit size* but unspecified length                 |
+| <<_:Integer,_:_*OtherInteger>> |                               | a binary that can have a minimum length                          |
+|--------------------------------+-------------------------------+------------------------------------------------------------------|
+| integer()                      | 23 or 1_337 or 2#101 or 16#1f |                                                                  |
+| 1..12                          | 3                             |                                                                  |
+| non_neg_integer()              | 0                             | integers >= 0                                                    |
+| pos_integer()                  | 2                             | integers >  0                                                    |
+| neg_integer()                  | -2                            | integers <  0                                                    |
+| float()                        | 3.14                          |                                                                  |
+|--------------------------------+-------------------------------+------------------------------------------------------------------|
+| fun()                          |                               | any kind of function                                             |
+| fun(() -> Type)                |                               | an anonymous function that takes no arguments, that returns Type |
+| fun((...) -> Type)             |                               | an anonymous function of any arity, that returns Type            |
+| fun((TypeA,TypeB) -> Type)     |                               | an anonymous function                                            |
+|--------------------------------+-------------------------------+------------------------------------------------------------------|
+| term()                         |                               | equivalent to any()                                              |
+| boolean()                      | 'false'                       | 'true' ¦ 'false'                                                 |
+| byte()                         | 42                            | 0..255                                                           |
+| char()                         | $A or $\n                     | 0..16#10ffff                                                     |
+| number()                       | 23 or 3.14                    | integer() ¦ float()                                              |
+| string()                       | "foo"                         | [char()]                                                         |
+| non_empty_string()             |                               | [char(),...]                                                     |
+| bitstring()                    | <<"ABC">>                     |                                                                  |
+| atom()                         | foo or 'foo'                  |                                                                  |
+| nil or []                      | []                            |                                                                  |
+| timeout()                      |                               | non_neg_integer() ¦ 'infinity'                                   |
+| node()                         |                               | erlang node name                                                 |
+| no_return()                    |                               | equivalent to none(), things that loop forever                   |
+|--------------------------------+-------------------------------+------------------------------------------------------------------|
+
 *** Compound types
-|---------------+-------------+----------------+----------------------------+--------------------------+---------|
-| type          | creating    | p.matching     | accessing                  | updating                 | spec    |
-|---------------+-------------+----------------+----------------------------+--------------------------+---------|
-| map #{TList}  | #{a => 1}   | #{a := Value}  | maps:get(K,M)              | maps:update(K,V,M)       | map()   |
-|               |             |                |                            | M#{key => 1}             |         |
-|               |             |                |                            | M#{key := 1}             |         |
-| list(TYPE)    | [1,2]       | [A,B¦C]        | lists:nth(N,L)             |                          | list()  |
-| tuple(TList?) | {a,1}       | {A,B}          | erlang:element(K,T)        | erlang:setelement(K,V,T) | {T1,T2} |
-| record        | #name{a=23} | #name{a=Value} | Rec#r1.field               | Rec#name{field = 23}     | #name{} |
-|               |             |                | Record#r1.field1#r2.field2 |                          |         |
-|---------------+-------------+----------------+----------------------------+--------------------------+---------|
+|-----------------------------+-------------+----------------+----------------------------+--------------------------+---------|
+| type                        | creating    | p.matching     | accessing                  | updating                 | spec    |
+|-----------------------------+-------------+----------------+----------------------------+--------------------------+---------|
+| map #{TList}                | #{a => 1}   | #{a := Value}  | maps:get(K,M)              | maps:update(K,V,M)       | map()   |
+|                             |             |                |                            | M#{key => 1}             |         |
+|                             |             |                |                            | M#{key := 1}             |         |
+|-----------------------------+-------------+----------------+----------------------------+--------------------------+---------|
+| list(Type)                  | [], [1]     | [A,B¦C]        | lists:nth(N,L)             |                          | list()  |
+| [Type]                      |             |                |                            |                          |         |
+| [Type,...]                  | [1]         |                |                            |                          |         |
+| improper_list(Type,TypeEnd) |             |                |                            |                          |         |
+| maybe_improper_list()       |             |                |                            |                          |         |
+| maybe_improper_list(T)      |             |                |                            |                          |         |
+| maybe_improper_list(T,T)    |             |                |                            |                          |         |
+|-----------------------------+-------------+----------------+----------------------------+--------------------------+---------|
+| tuple(TList?)               | {a,1}       | {A,B}          | erlang:element(K,T)        | erlang:setelement(K,V,T) | {T1,T2} |
+| tuple()                     |             |                |                            |                          |         |
+|-----------------------------+-------------+----------------+----------------------------+--------------------------+---------|
+| record                      | #name{a=23} | #name{a=Value} | Rec#r1.field               | Rec#name{field = 23}     | #name{} |
+|                             |             |                | Record#r1.field1#r2.field2 |                          |         |
+|-----------------------------+-------------+----------------+----------------------------+--------------------------+---------|
 - List ops
   | [1,2] ++ [1] | append lists | [1,2,1] |
   | [1,2] -- [1] | remove       | [2]     |
